--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
 Stephen Adah <mailstephenreal@gmail.com>
+Ifeanyi Ikpenyi <ifeanyiikpenyi@yahoo.com>
